--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "env": "node -r dotenv/config index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,10 +13,12 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.4"
   },
   "keywords": []
